# gmail_bulk_delete

./: .env.example  .gitignore  .pre-commit-config.yaml  DEVELOPMENT_TIMELINE.md  DEVELOPMENT_TIMELINE_UPDATED.md  FEATURE_LIST.md  FIELD_VERIFICATION.md  Makefile  PROJECT_BOARD_CONFIG.md  PROJECT_FIELDS_SETUP.md  PROJECT_ROADMAP.md  PROJECT_SUMMARY.md  README.md  ROADMAP_SUMMARY.md  SETUP_INSTRUCTIONS.md  TIMELINE_CORRECTION_SUMMARY.md  UNCLE_RULES_REFACTORING.md  UPDATED_ROADMAP_SUMMARY.md  USER_GUIDE.md  config.json  config.json.example  delete_all_remaining.py  delete_config.json  delete_in_chunks.py  demo_test.py  gmail_bulk_delete.py  gmail_bulk_delete_config.py  gmail_bulk_delete_optimized.py  gmail_bulk_delete_performance.py  gmail_bulk_delete_refactored.py  my_custom_config.json  pyproject.toml  quick_delete.py  requirements.txt  rules.json.example  run_gmail_delete.sh  smart_filters.json
services/: config_loader.py  deletion_orchestrator.py  gmail_client.py  query_builder.py
src/: __init__.py  main.py
src/config/: __init__.py  settings.py
src/features/bulk_operations/: __init__.py  bulk_delete_service.py  progress_tracker.py
src/features/gmail_api/: __init__.py  auth_service.py  gmail_service.py
src/types/: __init__.py  gmail.py
src/utils/: __init__.py  logger.py
utils/: config_menu.py  display_helpers.py
